[package]
name = "elikoga-ical-rs"
version = "0.2.2"
edition = "2021"
description = "Ical library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
memchr = "2"
thiserror = "1"

[dev-dependencies]
rand = "0.8.5"

[[example]]
name = "generate_random"